cmake_minimum_required(VERSION 3.22)
project(c_cpp_scratch C)

set(CMAKE_C_STANDARD 11)

add_executable(c_cpp_scratch_1 2dArray.c)
add_executable(c_cpp_scratch_2 arr.c)
add_executable(c_cpp_scratch_3 arrayRef.c)
add_executable(c_cpp_scratch_4 ascii.c)
add_executable(c_cpp_scratch_5 assignAsyncMemory.c)
add_executable(c_cpp_scratch_6 asyncMemory.c)
#add_executable(c_cpp_scratch_7 calc.c)
#add_executable(c_cpp_scratch_8 char.c)
#add_executable(c_cpp_scratch_9 datastore.c)
#add_executable(c_cpp_scratch_10 dice.c)
#add_executable(c_cpp_scratch_11 factorial.c)
#add_executable(c_cpp_scratch_12 main.c)
#add_executable(c_cpp_scratch_13 memsetExam.c)
#add_executable(c_cpp_scratch_14 pointer.c)
#add_executable(c_cpp_scratch_15 string.c)
#add_executable(c_cpp_scratch_16 string2.c)
add_executable(c_cpp_scratch_17 fpp.c)
