cmake_minimum_required(VERSION 3.22)
project(c_cpp_scratch C)

set(CMAKE_C_STANDARD 11)

# TODO: 실행 대상 파일만 주석해제 후 사용중..
#       이렇게 하지 않아도 될 대응책 필요
#add_executable(c_cpp_scratch_1 2dArray.c)
#add_executable(c_cpp_scratch_2 arr.c)
#add_executable(c_cpp_scratch_3 arrayRef.c)
#add_executable(c_cpp_scratch_4 ascii.c)
#add_executable(c_cpp_scratch_5 assignAsyncMemory.c)
#add_executable(c_cpp_scratch_6 asyncMemory.c)
#add_executable(c_cpp_scratch_7 calc.c)
#add_executable(c_cpp_scratch_8 char.c)
#add_executable(c_cpp_scratch_9 datastore.c)
#add_executable(c_cpp_scratch_10 dice.c)
#add_executable(c_cpp_scratch_11 factorial.c)
#add_executable(c_cpp_scratch_12 main.c)
#add_executable(c_cpp_scratch_13 memsetExam.c)
#add_executable(c_cpp_scratch_14 pointer.c)
#add_executable(c_cpp_scratch_15 string.c)
#add_executable(c_cpp_scratch_16 string2.c)
#add_executable(c_cpp_scratch_17 fpp.c)
#add_executable(c_cpp_scratch_18 structEx.c)
add_executable(c_cpp_scratch_19 fileIO.c)
add_executable(c_cpp_scratch_20 useHeader.c temp.h temp.c)
add_executable(c_cpp_scratch_21 arrMethods.c)
add_executable(c_cpp_scratch_22 linkedList.c)
add_executable(c_cpp_scratch_23 stackWithLinked.c)
add_executable(c_cpp_scratch_24 queue.c)
add_executable(c_cpp_scratch_25 queueWithLinked.c)
add_executable(c_cpp_scratch_26 selectionSort.c)
